feat: update keyvlaue api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>