@@ -1,3 +1,17 @@
+/*
+ *  Copyright (c) 2024 Contributors to the Eclipse Foundation
+ *   All rights reserved. This program and the accompanying materials
+ *   are made available under the terms of the Eclipse Public License v1.0
+ *   and Apache License v2.0 which accompanies this distribution.
+ *   The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
+ *   and the Apache License v2.0 is available at http://www.opensource.org/licenses/apache2.0.php.
+ *
+ *   You may elect to redistribute this code under either of these licenses.
+ *
+ *   Contributors:
+ *
+ *   Otavio Santana
+ */
 package org.eclipse.jnosql.mapping.keyvalue;
 
 import jakarta.nosql.Template;
@@ -56,7 +70,7 @@ public interface KeyValueTemplate extends Template {
      */
     default <T> Iterable<T> put(Iterable<T> entities) {
         Objects.requireNonNull(entities, "entities is required");
-        return StreamSupport.stream(entities.spliterator(), false).map(this::put).collect(Collectors.toList());
+        return StreamSupport.stream(entities.spliterator(), false).map(this::put).toList();
     }
 
     /**
@@ -72,7 +86,7 @@ public interface KeyValueTemplate extends Template {
     default <T> Iterable<T> put(Iterable<T> entities, Duration ttl) {
         Objects.requireNonNull(entities, "entities is required");
         Objects.requireNonNull(ttl, "ttl is required");
-        return StreamSupport.stream(entities.spliterator(), false).map(d -> put(d, ttl)).collect(toList());
+        return StreamSupport.stream(entities.spliterator(), false).map(d -> put(d, ttl)).toList();
     }
 
     /**
